plugins {
    id 'java'
    id 'ivy-publish'
}

group 'org.sif'
version '0.1-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    jcenter()
    mavenLocal()
}

task sourceJar(type: Jar) {
    from sourceSets.main.allSource
}

configurations.all {
	resolutionStrategy.cacheDynamicVersionsFor 100, 'hours'
	resolutionStrategy.cacheChangingModulesFor 100, 'hours'
}

publishing {
    repositories {
        ivy {
            name "IvyPublicationRepo"
            url "file://opt/ivyRep"
            layout "maven"
        }
    }

    // This will make all components generated by this
    // build available to publishing (by 'gradle publish').
    publications {
        ivyJava(IvyPublication) {
            from components.java
            artifact sourceJar {
                classifier "sources"
            }
        }
    }
}

dependencies {
    implementation 'commons-beanutils:commons-beanutils:1.9.3'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    // Logging configuration
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    testRuntime 'org.apache.logging.log4j:log4j-api:2.8'
    testRuntime 'org.apache.logging.log4j:log4j-core:2.8'
    testRuntime 'org.apache.logging.log4j:log4j-slf4j-impl:2.8'

	testCompile ("org.springframework:spring-core:${org_springframework_version}")
	testCompile ("org.springframework:spring-context:${org_springframework_version}")

	testCompile "org.mockito:mockito-core:1.10.19"
	testCompile "org.springframework:spring-test:${org_springframework_version}"
}
